tests/jballerina-unit-test/src/test/resources/test-src/javainterop/negative/method_not_found1.bal
import ballerina/java;

public function interopWithErrorReturn() returns string {
    error e = acceptStringOrErrorReturn("example error with given reason");
    return e.message();
}

public function acceptStringOrErrorReturn(string s) returns error = @java:Method {
    'class:"org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"
} external;
